Adding NonCoding class and functions
 Changes to be committed:
	modified:   DESCRIPTION
	modified:   NAMESPACE
	modified:   R/AlignSeqs.R
	modified:   R/BrowseSeqs.R
	modified:   R/ExtractGenes.R
	modified:   R/FindGenes.R
	new file:   R/FindNonCoding.R
	modified:   R/FindSynteny.R
	modified:   R/Genes-class.R
	modified:   R/IdClusters.R
	modified:   R/IdTaxa.R
	new file:   R/LearnNonCoding.R
	modified:   R/LearnTaxa.R
	modified:   R/MaskAlignment.R
	new file:   R/NonCoding-class.R
	modified:   R/OrientNucleotides.R
	modified:   R/PredictDBN.R
	modified:   R/TerminalChar.R
	modified:   R/WriteGenes.R
	new file:   data/NonCodingRNA_Archaea.RData
	new file:   data/NonCodingRNA_Bacteria.RData
	new file:   data/NonCodingRNA_Eukarya.RData
	new file:   inst/extdata/IhtA.fas
	modified:   man/DECIPHER-package.Rd
	modified:   man/FindGenes.Rd
	new file:   man/FindNonCoding.Rd
	modified:   man/FindSynteny.Rd
	modified:   man/Genes-class.Rd
	modified:   man/IdTaxa.Rd
	new file:   man/LearnNonCoding.Rd
	modified:   man/LearnTaxa.Rd
	modified:   man/MaskAlignment.Rd
	new file:   man/NonCoding-class.Rd
	new file:   man/NonCodingRNA.Rd
	modified:   man/PredictDBN.Rd
	modified:   src/CalculateDeltaG.c
	modified:   src/ChainSegments.c
	modified:   src/DECIPHER.h
	modified:   src/EnumerateSequence.c
	modified:   src/GeneFinding.c
	modified:   src/InformationContent.c
	modified:   src/PredictDBN.c
	modified:   src/R_init_decipher.c
	new file:   vignettes/BrowseSeqsStructureIhtA.png
	modified:   vignettes/DECIPHERing.Rnw
	modified:   vignettes/FindingGenes.Rnw
	new file:   vignettes/FindingNonCodingRNAs.Rnw

--- a/vignettes/DECIPHERing.Rnw
+++ b/vignettes/DECIPHERing.Rnw
@@ -130,6 +130,8 @@ The functions of DECIPHER can be grouped into several categories based on intend
 \begin{enumerate} \item \Rfunction{AmplifyDNA} \item \Rfunction{CalculateEfficiencyPCR} \item \Rfunction{DesignPrimers} \item \Rfunction{DesignSignatures} \item \Rfunction{MeltDNA} \end{enumerate}
 \item Classifying sequences into a taxonomy:
 \begin{enumerate} \item \Rfunction{LearnTaxa} \item \Rfunction{IdTaxa} \item \Rclass{Taxa-class} \end{enumerate}
+\item Gene calling (a.k.a. gene finding):
+\begin{enumerate} \item \Rfunction{ExtractGenes} \item \Rfunction{FindGenes} \item \Rfunction{FindNonCoding} \item \Rclass{Genes-class} \item \Rfunction{LearnNonCoding} \item \Rclass{NonCoding-class} \item \Rfunction{WriteGenes} \end{enumerate}
 \end{enumerate}
 
 %------------------------------------------------------------
