--- a/vignettes/DesignProbes.Rnw
+++ b/vignettes/DesignProbes.Rnw
@@ -72,7 +72,7 @@ In cases where the desired level of specificity cannot be achieved, \Rfunction{D
 
 \subsection{Installing OligoArrayAux}
 
-The program OligoArrayAux (\underline{\url{http://mfold.rna.albany.edu/?q=DINAMelt/OligoArrayAux}}) is used to predict hybridization efficiency and must be installed in a location accessible by the system.  For example, the following code should print the installed OligoArrayAux version when executed from the \term{R} console:
+The program OligoArrayAux (\underline{\url{http://www.unafold.org/Dinamelt/software/oligoarrayaux.php}}) is used to predict hybridization efficiency and must be installed in a location accessible by the system.  For example, the following code should print the installed OligoArrayAux version when executed from the \term{R} console:
 
 <<expr0,eval=FALSE>>=
 system("hybrid-min -V")
